Closed
Bug 745224
Opened 13 years ago
Closed 13 years ago
nss_Init leaks memory
Categories
(NSS :: Libraries, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
3.14
People
(Reporter: elio.maldonado.batiz, Assigned: kdudka)
Details
Attachments
(1 file)
640 bytes,
patch
|
rrelyea
:
review+
|
Details | Diff | Splinter Review |
As originally reported by Kamil Dudka for Red Enterprise Linux:
Kamil Dudka 2012-01-09 08:27:09 EST
Version-Release number of selected component (if applicable):
nss-3.12.10-17.1.el6
How reproducible:
100 %
Steps to Reproduce:
1. patch curl by attachment #525555 [details] [diff] [review]
2. run this test-case: attachment #551005 [details] [diff] [review]
Actual results:
==17888== 512 bytes in 16 blocks are definitely lost in loss record 75 of 86
==17888== at 0x4A05FDE: malloc (vg_replace_malloc.c:236)
==17888== by 0x331A412574: GrowStuff (prprf.c:1076)
==17888== by 0x331A411BD7: dosprintf (prprf.c:137)
==17888== by 0x331A412439: PR_vsmprintf (prprf.c:1127)
==17888== by 0x331A41272C: PR_smprintf (prprf.c:1105)
==17888== by 0x5581D5C: nss_MkConfigString (nssinit.c:205)
==17888== by 0x55826E9: nss_Init (nssinit.c:597)
==17888== by 0x5582DFA: NSS_InitContext (nssinit.c:804)
==17888== by 0x4EC8776: nss_init_core (nss.c:905)
==17888== by 0x4EC8914: nss_init (nss.c:949)
==17888== by 0x4EC8F7F: Curl_nss_connect (nss.c:1167)
==17888== by 0x4EBC00A: Curl_ssl_connect (sslgen.c:185)
Reporter | ||
Comment 1•13 years ago
|
||
Attachment #614831 -
Flags: review?(rrelyea)
Reporter | ||
Updated•13 years ago
|
Target Milestone: --- → 3.13.5
Version: 3.13.4 → 3.12.10
Comment 2•13 years ago
|
||
Comment on attachment 614831 [details] [diff] [review]
Kamil's patch adapted for current sources
r+ rrelyea
Attachment #614831 -
Flags: review?(rrelyea) → review+
Reporter | ||
Comment 3•13 years ago
|
||
Patch applied to the trunk:
Checking in mozilla/security/nss/lib/nss/nssinit.c;
/cvsroot/mozilla/security/nss/lib/nss/nssinit.c,v <-- nssinit.c
new revision: 1.115; previous revision: 1.114
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Reporter | ||
Updated•13 years ago
|
Attachment #614831 -
Attachment description: Kamil's patch adapated for current sources → Kamil's patch adapted for current sources
Updated•13 years ago
|
Assignee: nobody → kdudka
OS: Linux → All
Priority: -- → P2
Hardware: x86_64 → All
Target Milestone: 3.13.5 → 3.14
You need to log in
before you can comment on or make changes to this bug.
Description
•