Bug 745224 - nss_Init leaks memory, author: kdudka@redhat.com, r=rrelyea